--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                            (cliente.filial === 1 || cliente.filial === 5);
                 });
 
-                fileInfo.textContent += ` - ${clientesFiltrados.length} clientes elegíveis encontrados`;
+                fileInfo.textContent += ` - ${clientesFiltrados.length} clientes com pagamento em dia encontrados`;
                 sorteioSection.classList.remove('hidden');
             };
 
