--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="card hidden" id="uploadSection">
             <h2 class="card-title"><i class="fas fa-file-upload"></i> Upload do Arquivo</h2>
             <div class="form-group">
-                <label for="fileInput">Selecione o arquivo XLS/XLSX</label>
+                <label for="fileInput">Selecione o arquivo XLS/XLSX obtido em Dashboard Contas a Receber</label>
                 <input type="file" id="fileInput" accept=".xls,.xlsx">
             </div>
             <button id="processBtn" class="btn btn-secondary" disabled><i class="fas fa-cog"></i> Processar Arquivo</button>
